--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -20,7 +21,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-vue": "^7.19.1"
+    "eslint-plugin-vue": "^7.19.1",
+    "prettier": "2.4.1"
   },
   "prettier": {
     "singleQuote": true
